# fast_rsqrt

./: CMakeLists.txt  bm_rsqrt.cpp  rsqrt.cpp  rsqrt.hpp  test_rsqrt.cpp
